【优化】pom引用